bad/return_string_in_func_returning_class.example_compiler_output
ERROR
[1mbad/return_string_in_func_returning_class.lat:4:20: [1;31merror: [0;1mreturned value of type `string` is not convertible to return type `Y`[m
Y test() { return ""; }
                   [1;32m^[m
